Educaiton DAta Models v2 created
Created and updated based on our working session on Jan 23rd

--- a/Education_Data_Models v1.ipynb
+++ b/Education_Data_Models v1.ipynb
@@ -1845,7 +1845,9 @@
    "source": [
     "# X = inputs for prediction; Y = what we are predicting\n",
     "master_df_cleaned = master_df.dropna()\n",
-    "x = master_df_cleaned[['enrollment', 'exp_current_instruction_total']]\n",
+    "x = master_df_cleaned[['enrollment', 'exp_current_instruction_total']]  # add more explanatory variables; \n",
+    "# for categorical variables we may need to create dummies for categorical variables leaving out one of them (ie, if we\n",
+    "# have four different variables, we create three dummies)\n",
     "y = master_df_cleaned['read_test_pct_prof_high']\n",
     "x = sm.add_constant(x)\n",
     "est = sm.OLS(y, x).fit()\n",
